1. Removed usage of approvedByEditor property 2. Removed assignee fields from tile details 3. Removed unused fields from tile object 4. Removed unused tiles' colours
