# src/api/apiClient.ts
@@ -302,16 +302,7 @@ export interface Tile {
   overlapMaxLon: number;
 
   /** @format int32 */
-  osmStopsCount?: number;
-
-  /** @format int32 */
   gtfsStopsCount?: number;
-
-  /** @format int32 */
-  usersCount?: number | null;
-  stops?: Stop[] | null;
-  approvedByEditor: boolean;
-  approvedBySupervisor: boolean;
 
   /** @format int32 */
   zoomLevel?: number;
